# auto-z3

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE.txt  README.docx  README.md  app_fol.py  app_zen.py  app_zen_plus.py  builder_state.py  contributing.md  fol_core.py  i18n.py  logic_core.py  maps_registry.py  preset_io.py  prof_templates.py  pyproject.toml  requirements.txt  solver_graphcolor.py  ui_theme.py  z3_runner.py
.github/workflows/: python-ci.yml
color_maps/: __init__.py  color_apply.py  folium_sat.py  maps.py  plotly_preview.py  preview_folium.py  sat_solver.py  solver.py  ui.py
docs/: Nuovo Documento di testo.txt  api.md  architecture.md  code_of_conduct.md  teaching_guide.md
scripts/: bench_sat.py  export_geojson_americas.py  find_orphans.py  make_geojson_americas.py  validate_benchmarks.py
tests/: conftest.py  test_fol_beta_min.py  test_i18n_full.py  test_logic_core.py  test_logic_stress.py  test_map_coloring.py  test_map_coloring_extra.py  test_smt_integrity.py
